<package format="3">
  <name>string_length_node</name>
  <version>0.0.0</version>
  <description>A basic tutorial using the rclrs</description>
  <maintainer email="jlmv.96@gmail.com">Jose L Millán-Valbuena</maintainer>
  <author>Jose L Millán-Valbuena/jlmv.96@gmail.com</author>
  <license></license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>