<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostics_publisher_py</name>
  <version>0.0.0</version>
  <description>A package to publish a basic diagnostics message in Python</description>
  <maintainer email="jlmv.96@gmail.com">Jose L Millán-Valbuena</maintainer>
  <author email="jlmv.96@gmail.com">Jose L Millán-Valbuena</author>
  <license>MPL</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
